@@ -18,6 +18,7 @@
     <Action name="options_show_statusbar"/>
     <Action name="options_show_sidebar" group="show_merge"/>
     <Action name="fullscreen"/>
+    <Action name="show_sun"/>
   </Menu>
 </MenuBar>
 
