@@ -19,6 +19,7 @@
   </Menu>
   <Menu name="settings" noMerge="1"><text>&amp;Settings</text>
     <Action name="fullscreen"/>
+    <Action name="show_sun"/>
   </Menu>
 </MenuBar>
 
